# debug_notebook

./: .gitignore  README.md  foo.c  foo.ll
HWAI4Science/: bf16_gemm_64.c  four_loops_arm  gemm.mlir  int8_vnni_gemm_64.c  plot_armSME.py  plot_pie.py  test_ewald.cc
brook_proxy/: README.md
build_perf_from_source/: README.md
cbench_dataset/: README.md
code_similarity/: README.md  sim_musl_static.tar
compile_only_our_func/: twosum.cpp
cross_compile/: README.md  addf.c  check_syntax.sh  compile_armv7a.sh  compile_host.sh  student.cpp
cvm/: gemv.cu  tensormd.py
deploy_openhands_local/: README.md  docker-compose.yml
dump_compiler_pass_info/: README.md
example_onnx_mlir/: README.md  conv_relu_model.mlir  conv_relu_model.onnx  create_conv_relu_model.py
imdecoder/: CMakeLists.txt  py_imread.py  test_imread.cpp
login_docker/: Dockerfile  README.md  id_rsa.pub  scripts.sh
mlir_compile/: README.md  conv_relu.mlir  conv_relu_lowered.mlir
opt_pass/: build.sh  foo.optbc
opt_pie/: 20.c  build.sh  tmp.txt
port_forward/: README.md
sort_DRL/: verify.py
ssh_tunnel/: README.md
test_ghidra/: BinExport.properties  README.md
